--- a/eTools Ultimate/Views/Dialogs/MoverReferenceModelDialog.xaml
+++ b/eTools Ultimate/Views/Dialogs/MoverReferenceModelDialog.xaml
@@ -3,34 +3,29 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dialogViewModels="clr-namespace:eTools_Ultimate.ViewModels.Controls.Dialogs"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Dialogs"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:dialogViewModels="clr-namespace:eTools_Ultimate.ViewModels.Controls.Dialogs"
     Title="Select Reference Model"
+    d:DataContext="{d:DesignInstance dialogViewModels:MoverReferenceModelViewModel,
+                                     IsDesignTimeCreatable=False}"
     IsPrimaryButtonEnabled="True"
     PrimaryButtonText="Accept"
-    d:DataContext="{d:DesignInstance dialogViewModels:MoverReferenceModelViewModel,
-                                 IsDesignTimeCreatable=False}"
     mc:Ignorable="d">
     <ui:ContentDialog.Resources>
         <Style BasedOn="{StaticResource {x:Type ui:ContentDialog}}" TargetType="{x:Type local:MoverReferenceModelDialog}" />
-        <Style x:Key="AppListViewStyle"
-       TargetType="ListView">
-            <Setter Property="Background"
-            Value="Transparent"/>
-            <Setter Property="BorderBrush"
-            Value="Transparent"/>
-            <Setter Property="BorderThickness"
-            Value="0"/>
-            <Setter Property="Foreground"
-            Value="{DynamicResource TextFillColorPrimaryBrush}"/>
+        <Style x:Key="AppListViewStyle" TargetType="ListView">
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="BorderBrush" Value="Transparent" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
         </Style>
     </ui:ContentDialog.Resources>
-    <Grid Margin="20, 0">
+    <Grid Margin="20,0">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <TextBlock
@@ -42,25 +37,25 @@
         <ui:Card Grid.Row="1" Margin="0,0,0,0">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
                 <ui:TextBox
                     Grid.Row="0"
                     Margin="0,0,0,10"
-                    PlaceholderText="Search models..."
                     Icon="Search24"
-                    Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    PlaceholderText="Search models..."
+                    Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                 <ListView
-                    Grid.Row="1"
                     x:Name="ModelsListView"
-                    Style="{StaticResource AppListViewStyle}"
+                    Grid.Row="1"
                     Height="250"
-                    ItemsSource="{Binding MoversView, Mode=OneWay}"
                     IsSynchronizedWithCurrentItem="True"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    ItemsSource="{Binding MoversView, Mode=OneWay}"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"
+                    Style="{StaticResource AppListViewStyle}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Grid Margin="0,5">
@@ -69,8 +64,11 @@
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Grid.Column="1">
-                                    <TextBlock Text="{Binding Name, Mode=OneWay}" FontWeight="SemiBold" />
-                                    <TextBlock Text="{Binding Identifier, Mode=OneWay}" Opacity="0.7" TextWrapping="Wrap" />
+                                    <TextBlock FontWeight="SemiBold" Text="{Binding Name, Mode=OneWay}" />
+                                    <TextBlock
+                                        Opacity="0.7"
+                                        Text="{Binding Identifier, Mode=OneWay}"
+                                        TextWrapping="Wrap" />
                                 </StackPanel>
                             </Grid>
                         </DataTemplate>
