--- a/eTools Ultimate/Views/Dialogs/PatchNotesDialog.xaml
+++ b/eTools Ultimate/Views/Dialogs/PatchNotesDialog.xaml
@@ -1,88 +1,111 @@
-﻿<ui:ContentDialog x:Class="eTools_Ultimate.Views.Dialogs.PatchNotesDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        xmlns:local="clr-namespace:eTools_Ultimate.Views.Dialogs"
-        xmlns:dialogViewModels="clr-namespace:eTools_Ultimate.ViewModels.Controls.Dialogs"
-        xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
-        ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-        ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-        d:DataContext="{d:DesignInstance dialogViewModels:PatchNotesViewModel, IsDesignTimeCreatable=False}"
-        mc:Ignorable="d" >
+﻿<ui:ContentDialog
+    x:Class="eTools_Ultimate.Views.Dialogs.PatchNotesDialog"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dialogViewModels="clr-namespace:eTools_Ultimate.ViewModels.Controls.Dialogs"
+    xmlns:local="clr-namespace:eTools_Ultimate.Views.Dialogs"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    d:DataContext="{d:DesignInstance dialogViewModels:PatchNotesViewModel,
+                                     IsDesignTimeCreatable=False}"
+    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
+    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    mc:Ignorable="d">
     <ui:ContentDialog.Resources>
         <Style BasedOn="{StaticResource {x:Type ui:ContentDialog}}" TargetType="{x:Type local:PatchNotesDialog}" />
-        <!-- Iconstyles für die verschiedenen Änderungstypen -->
+        <!--  Iconstyles für die verschiedenen Änderungstypen  -->
         <Style x:Key="IconBase" TargetType="ui:SymbolIcon">
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Margin" Value="0,0,8,0"/>
-            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Margin" Value="0,0,8,0" />
+            <Setter Property="VerticalAlignment" Value="Top" />
         </Style>
 
-        <Style x:Key="AddedIcon" TargetType="ui:SymbolIcon" BasedOn="{StaticResource IconBase}">
-            <Setter Property="Foreground" Value="#4CAF50"/>
-            <Setter Property="Symbol" Value="Add24"/>
+        <Style
+            x:Key="AddedIcon"
+            BasedOn="{StaticResource IconBase}"
+            TargetType="ui:SymbolIcon">
+            <Setter Property="Foreground" Value="#4CAF50" />
+            <Setter Property="Symbol" Value="Add24" />
         </Style>
 
-        <Style x:Key="ChangedIcon" TargetType="ui:SymbolIcon" BasedOn="{StaticResource IconBase}">
-            <Setter Property="Foreground" Value="#FF9800"/>
-            <Setter Property="Symbol" Value="Wrench24"/>
+        <Style
+            x:Key="ChangedIcon"
+            BasedOn="{StaticResource IconBase}"
+            TargetType="ui:SymbolIcon">
+            <Setter Property="Foreground" Value="#FF9800" />
+            <Setter Property="Symbol" Value="Wrench24" />
         </Style>
 
-        <Style x:Key="RemovedIcon" TargetType="ui:SymbolIcon" BasedOn="{StaticResource IconBase}">
-            <Setter Property="Foreground" Value="#F44336"/>
-            <Setter Property="Symbol" Value="Delete24"/>
+        <Style
+            x:Key="RemovedIcon"
+            BasedOn="{StaticResource IconBase}"
+            TargetType="ui:SymbolIcon">
+            <Setter Property="Foreground" Value="#F44336" />
+            <Setter Property="Symbol" Value="Delete24" />
         </Style>
 
-        <Style x:Key="FixedIcon" TargetType="ui:SymbolIcon" BasedOn="{StaticResource IconBase}">
-            <Setter Property="Foreground" Value="#9C27B0"/>
-            <Setter Property="Symbol" Value="Bug24"/>
+        <Style
+            x:Key="FixedIcon"
+            BasedOn="{StaticResource IconBase}"
+            TargetType="ui:SymbolIcon">
+            <Setter Property="Foreground" Value="#9C27B0" />
+            <Setter Property="Symbol" Value="Bug24" />
         </Style>
 
-        <Style x:Key="ImprovedIcon" TargetType="ui:SymbolIcon" BasedOn="{StaticResource IconBase}">
-            <Setter Property="Foreground" Value="#2196F3"/>
-            <Setter Property="Symbol" Value="ArrowCircleUp24"/>
+        <Style
+            x:Key="ImprovedIcon"
+            BasedOn="{StaticResource IconBase}"
+            TargetType="ui:SymbolIcon">
+            <Setter Property="Foreground" Value="#2196F3" />
+            <Setter Property="Symbol" Value="ArrowCircleUp24" />
         </Style>
 
-        <Style x:Key="UpdatedIcon" TargetType="ui:SymbolIcon" BasedOn="{StaticResource IconBase}">
-            <Setter Property="Foreground" Value="#FFD700"/>
-            <Setter Property="Symbol" Value="ArrowSync24"/>
+        <Style
+            x:Key="UpdatedIcon"
+            BasedOn="{StaticResource IconBase}"
+            TargetType="ui:SymbolIcon">
+            <Setter Property="Foreground" Value="#FFD700" />
+            <Setter Property="Symbol" Value="ArrowSync24" />
         </Style>
 
-        <!-- Stile für die Textblöcke -->
+        <!--  Stile für die Textblöcke  -->
         <Style x:Key="VersionTitle" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}"/>
-            <Setter Property="Margin" Value="0,8,0,4"/>
+            <Setter Property="FontSize" Value="18" />
+            <Setter Property="FontWeight" Value="SemiBold" />
+            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
+            <Setter Property="Margin" Value="0,8,0,4" />
         </Style>
 
         <Style x:Key="VersionDate" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="12"/>
-            <Setter Property="Foreground" Value="{DynamicResource TextFillColorSecondaryBrush}"/>
-            <Setter Property="Margin" Value="8,10,0,0"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="Foreground" Value="{DynamicResource TextFillColorSecondaryBrush}" />
+            <Setter Property="Margin" Value="8,10,0,0" />
+            <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
 
         <Style x:Key="ChangeText" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="13"/>
-            <Setter Property="TextWrapping" Value="Wrap"/>
-            <Setter Property="Margin" Value="0,0,0,0"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}"/>
+            <Setter Property="FontSize" Value="13" />
+            <Setter Property="TextWrapping" Value="Wrap" />
+            <Setter Property="Margin" Value="0,0,0,0" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Foreground" Value="{DynamicResource TextFillColorPrimaryBrush}" />
         </Style>
 
-        <!-- DataTemplate für einen Bullet Point -->
+        <!--  DataTemplate für einen Bullet Point  -->
         <DataTemplate x:Key="BulletPointTemplate">
             <Grid Margin="0,4,0,4">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <ContentControl Grid.Column="0" Content="{Binding Icon}"/>
-                <TextBlock Grid.Column="1" Text="{Binding Text}" Style="{StaticResource ChangeText}"/>
+                <ContentControl Grid.Column="0" Content="{Binding Icon}" />
+                <TextBlock
+                    Grid.Column="1"
+                    Style="{StaticResource ChangeText}"
+                    Text="{Binding Text}" />
             </Grid>
         </DataTemplate>
         <converters:PatchModificationTypeToSymbolConverter x:Key="PatchModificationTypeToSymbolConverter" />
@@ -92,78 +115,108 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <Grid Margin="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0"
-                           Text="Patch notes"
-                           FontSize="24" 
-                           FontWeight="Bold" 
-                           Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                           HorizontalAlignment="Center"
-                           TextWrapping="Wrap"
-                           Margin="0,0,0,16"/>
+            <TextBlock
+                Grid.Row="0"
+                Margin="0,0,0,16"
+                HorizontalAlignment="Center"
+                FontSize="24"
+                FontWeight="Bold"
+                Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                Text="Patch notes"
+                TextWrapping="Wrap" />
 
-            <!-- Legende -->
+            <!--  Legende  -->
             <ItemsControl Grid.Row="1" ItemsSource="{Binding ModificationTypes, Mode=OneWay}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <WrapPanel Grid.Row="1" Margin="0,0,0,16"/>
+                        <WrapPanel Grid.Row="1" Margin="0,0,0,16" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Horizontal" Margin="0,0,16,0">
-                            <ui:SymbolIcon Symbol="{Binding Mode=OneWay, Converter={StaticResource PatchModificationTypeToSymbolConverter}}" Foreground="{Binding Mode=OneWay, Converter={StaticResource PatchModificationTypeToForegroundConverter}}" FontSize="12"/>
-                            <TextBlock Text="{Binding Mode=OneWay, Converter={StaticResource PatchModificationTypeToTextConverter}}" Margin="4,0,0,0" FontSize="12" Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
+                        <StackPanel Margin="0,0,16,0" Orientation="Horizontal">
+                            <ui:SymbolIcon
+                                FontSize="12"
+                                Foreground="{Binding Mode=OneWay, Converter={StaticResource PatchModificationTypeToForegroundConverter}}"
+                                Symbol="{Binding Mode=OneWay, Converter={StaticResource PatchModificationTypeToSymbolConverter}}" />
+                            <TextBlock
+                                Margin="4,0,0,0"
+                                FontSize="12"
+                                Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                Text="{Binding Mode=OneWay, Converter={StaticResource PatchModificationTypeToTextConverter}}" />
                         </StackPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
 
-            <!-- Changelog-Inhalt mit Scrollbar -->
-            <ScrollViewer Grid.Row="2" 
-                           VerticalScrollBarVisibility="Visible"
-                           HorizontalScrollBarVisibility="Disabled"
-                           Height="400"
-                           Background="{DynamicResource ApplicationBackgroundBrush}">
+            <!--  Changelog-Inhalt mit Scrollbar  -->
+            <ScrollViewer
+                Grid.Row="2"
+                Height="400"
+                Background="{DynamicResource ApplicationBackgroundBrush}"
+                HorizontalScrollBarVisibility="Disabled"
+                VerticalScrollBarVisibility="Visible">
                 <StackPanel x:Name="ChangelogContent" Margin="0,8,16,0">
                     <ItemsControl ItemsSource="{Binding Patches, Mode=OneWay}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <Grid Margin="0, 0, 0, 20">
+                                <Grid Margin="0,0,0,20">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <StackPanel Orientation="Horizontal" Grid.Row="0">
-                                        <TextBlock Text="{Binding Version, Mode=OneWay}" FontSize="18" FontWeight="SemiBold" Foreground="{DynamicResource TextFillColorPrimaryBrush}" Margin="0, 8, 0, 4" />
-                                        <TextBlock FontSize="12" Foreground="{DynamicResource TextFillColorSecondaryBrush}" Margin="8, 10, 0, 0" VerticalAlignment="Center">
-                                                <Run Text="- " />
-                                                <Run Text="{Binding Date, Mode=OneWay, StringFormat=D}" />
+                                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                        <TextBlock
+                                            Margin="0,8,0,4"
+                                            FontSize="18"
+                                            FontWeight="SemiBold"
+                                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                                            Text="{Binding Version, Mode=OneWay}" />
+                                        <TextBlock
+                                            Margin="8,10,0,0"
+                                            VerticalAlignment="Center"
+                                            FontSize="12"
+                                            Foreground="{DynamicResource TextFillColorSecondaryBrush}">
+                                            <Run Text="- " />
+                                            <Run Text="{Binding Date, Mode=OneWay, StringFormat=D}" />
                                         </TextBlock>
                                     </StackPanel>
-                                    <StackPanel Margin="16, 8, 0, 0" Grid.Row="1">
+                                    <StackPanel Grid.Row="1" Margin="16,8,0,0">
                                         <ItemsControl ItemsSource="{Binding Modifications, Mode=OneWay}">
                                             <ItemsControl.ItemTemplate>
                                                 <DataTemplate>
-                                                    <Grid Margin="0, 4, 0, 4">
+                                                    <Grid Margin="0,4,0,4">
                                                         <Grid.ColumnDefinitions>
                                                             <ColumnDefinition Width="Auto" />
                                                             <ColumnDefinition Width="*" />
                                                         </Grid.ColumnDefinitions>
 
-                                                        <!-- TODO: add symbol and foreground bindings -->
-                                                        <ui:SymbolIcon Symbol="{Binding Type, Mode=OneWay, Converter={StaticResource PatchModificationTypeToSymbolConverter}}" Foreground="{Binding Type, Mode=OneWay, Converter={StaticResource PatchModificationTypeToForegroundConverter}}" Grid.Column="0" FontSize="16" Margin="0, 0, 8, 0" VerticalAlignment="Top" />
-                                                        <TextBlock Grid.Column="1" Text="{Binding Text, Mode=OneWay}" FontSize="13" TextWrapping="Wrap" VerticalAlignment="Center" Foreground="{DynamicResource TextFillColorPrimaryBrush}" />
+                                                        <!--  TODO: add symbol and foreground bindings  -->
+                                                        <ui:SymbolIcon
+                                                            Grid.Column="0"
+                                                            Margin="0,0,8,0"
+                                                            VerticalAlignment="Top"
+                                                            FontSize="16"
+                                                            Foreground="{Binding Type, Mode=OneWay, Converter={StaticResource PatchModificationTypeToForegroundConverter}}"
+                                                            Symbol="{Binding Type, Mode=OneWay, Converter={StaticResource PatchModificationTypeToSymbolConverter}}" />
+                                                        <TextBlock
+                                                            Grid.Column="1"
+                                                            VerticalAlignment="Center"
+                                                            FontSize="13"
+                                                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                                                            Text="{Binding Text, Mode=OneWay}"
+                                                            TextWrapping="Wrap" />
                                                     </Grid>
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
