--- a/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
+++ b/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
@@ -2,12 +2,12 @@
     x:Class="eTools_Ultimate.Views.Pages.DashboardPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
-    xmlns:pageViewModels="clr-namespace:eTools_Ultimate.ViewModels.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:pageViewModels="clr-namespace:eTools_Ultimate.ViewModels.Pages"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
     Title="DashboardPage"
     d:DataContext="{d:DesignInstance pageViewModels:DashboardViewModel,
                                      IsDesignTimeCreatable=False}"
@@ -18,18 +18,18 @@
 
 
     <Page.Resources>
-        <SolidColorBrush x:Key="ApplicationBackgroundBrush" Color="#FFFFFF"/>
-        <SolidColorBrush x:Key="TextFillColorPrimaryBrush" Color="#212121"/>
-        <SolidColorBrush x:Key="TextFillColorSecondaryBrush" Color="#9E9E9E"/>
+        <SolidColorBrush x:Key="ApplicationBackgroundBrush" Color="#FFFFFF" />
+        <SolidColorBrush x:Key="TextFillColorPrimaryBrush" Color="#212121" />
+        <SolidColorBrush x:Key="TextFillColorSecondaryBrush" Color="#9E9E9E" />
 
 
 
-        <!-- Template for navigation cards -->
+        <!--  Template for navigation cards  -->
         <DataTemplate x:Key="NavigationCardTemplate">
-            <ui:Card 
-                Margin="6"
+            <ui:Card
                 Width="230"
                 Height="120"
+                Margin="6"
                 Cursor="Hand"
                 Tag="{Binding}">
                 <behaviors:Interaction.Triggers>
@@ -44,50 +44,50 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <!-- Left icon - larger size -->
-                    <Image 
+                    <!--  Left icon - larger size  -->
+                    <Image
                         Grid.Column="0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
                         Width="48"
                         Height="48"
                         Margin="4,0,14,0"
-                        Source="{Binding Icon}"
-                        RenderOptions.BitmapScalingMode="HighQuality" 
-                        RenderOptions.EdgeMode="Aliased">
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        RenderOptions.BitmapScalingMode="HighQuality"
+                        RenderOptions.EdgeMode="Aliased"
+                        Source="{Binding Icon}">
                         <Image.CacheMode>
                             <BitmapCache RenderAtScale="2" />
                         </Image.CacheMode>
                     </Image>
 
-                    <!-- Text in the middle -->
+                    <!--  Text in the middle  -->
                     <StackPanel Grid.Column="1" VerticalAlignment="Center">
-                        <TextBlock 
+                        <TextBlock
                             FontSize="16"
                             FontWeight="Medium"
                             Text="{Binding Title}" />
-                        <TextBlock 
+                        <TextBlock
                             Margin="0,4,0,0"
                             Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                             Text="{Binding Description}"
                             TextWrapping="Wrap" />
                     </StackPanel>
 
-                    <!-- Right arrow -->
-                    <ui:SymbolIcon 
+                    <!--  Right arrow  -->
+                    <ui:SymbolIcon
                         Grid.Column="2"
+                        Margin="8,0,0,0"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        Margin="8,0,0,0"
-                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                         FontSize="16"
+                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                         Symbol="ChevronRight24" />
                 </Grid>
             </ui:Card>
         </DataTemplate>
     </Page.Resources>
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+    <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -95,12 +95,14 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <!-- Banner styled like the SettingsPage -->
-            <Border x:Name="BannerBorder" Grid.Row="1" 
-                    Height="300"
-                    Margin="0,0,0,0"
-                    Cursor="Arrow"
-                    CornerRadius="8">
+            <!--  Banner styled like the SettingsPage  -->
+            <Border
+                x:Name="BannerBorder"
+                Grid.Row="1"
+                Height="300"
+                Margin="0,0,0,0"
+                CornerRadius="8"
+                Cursor="Arrow">
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                         <GradientStop Offset="0" Color="#2B5797" />
@@ -109,8 +111,8 @@
                 </Border.Background>
                 <Border CornerRadius="8">
                     <Border.Background>
-                        <ImageBrush 
-                            ImageSource="/Assets/Images/HomePage.png" 
+                        <ImageBrush
+                            ImageSource="/Assets/Images/HomePage.png"
                             RenderOptions.BitmapScalingMode="HighQuality"
                             Stretch="UniformToFill" />
                     </Border.Background>
@@ -120,13 +122,17 @@
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
 
-                        <!-- Black banner with blur effect behind Welcome text -->
-                        <Border Grid.Row="0"
-                                VerticalAlignment="Center"
-                                Background="#4C000000"
-                                Height="100">
+                        <!--  Black banner with blur effect behind Welcome text  -->
+                        <Border
+                            Grid.Row="0"
+                            Height="100"
+                            VerticalAlignment="Center"
+                            Background="#4C000000">
                             <Border.Effect>
-                                <BlurEffect Radius="30" KernelType="Gaussian" RenderingBias="Quality" />
+                                <BlurEffect
+                                    KernelType="Gaussian"
+                                    Radius="30"
+                                    RenderingBias="Quality" />
                             </Border.Effect>
                         </Border>
 
@@ -137,10 +143,11 @@
                             VerticalAlignment="Center"
                             Background="Transparent">
                             <ui:TextBlock
+                                FontSize="32"
                                 FontTypography="Title"
-                                Foreground="#FFFFFF" 
                                 FontWeight="Bold"
-                                FontSize="32" Text="Welcome" />
+                                Foreground="#FFFFFF"
+                                Text="Welcome" />
                         </StackPanel>
 
                         <Grid Grid.Row="1">
@@ -159,76 +166,88 @@
                                 Appearance="Primary"
                                 Background="#4DFFFFFF"
                                 BorderBrush="#33FFFFFF"
-                                Foreground="#FFFFFF"
+                                Command="{Binding OpenPatchNotesDialogCommand}"
                                 Content="Patchlogs"
-                                Icon="History24"
-                                Command="{Binding OpenPatchNotesDialogCommand}" />
+                                Foreground="#FFFFFF"
+                                Icon="History24" />
                         </Grid>
                     </Grid>
                 </Border>
             </Border>
 
-            <!-- Navigation Cards without inner ScrollViewer -->
-            <Grid Grid.Row="2" 
-                 Margin="0,24,0,0" 
-                 HorizontalAlignment="Stretch" 
-                 VerticalAlignment="Top">
-                <ItemsControl 
-                    Margin="0,0,0,50" 
+            <!--  Navigation Cards without inner ScrollViewer  -->
+            <Grid
+                Grid.Row="2"
+                Margin="0,24,0,0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Top">
+                <ItemsControl
+                    Margin="0,0,0,50"
                     ItemTemplate="{StaticResource NavigationCardTemplate}"
                     ItemsSource="{Binding NavigationCards}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" />
+                            <WrapPanel HorizontalAlignment="Center" Orientation="Horizontal" />
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                 </ItemsControl>
             </Grid>
 
-            <!-- GitHub Button -->
-            <Image Grid.Row="2"
-                   Source="/eTools Ultimate;component/Assets/Icons/github.png" 
-                   Width="36" 
-                   Height="36" 
-                   Stretch="Uniform"
-                   Margin="0,0,60,20"
-                   HorizontalAlignment="Right"
-                   VerticalAlignment="Bottom"
-                   Cursor="Hand"
-                   ToolTip="View on GitHub"
-                   RenderOptions.BitmapScalingMode="HighQuality">
+            <!--  GitHub Button  -->
+            <Image
+                Grid.Row="2"
+                Width="36"
+                Height="36"
+                Margin="0,0,60,20"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Cursor="Hand"
+                RenderOptions.BitmapScalingMode="HighQuality"
+                Source="/eTools Ultimate;component/Assets/Icons/github.png"
+                Stretch="Uniform"
+                ToolTip="View on GitHub">
                 <Image.InputBindings>
-                    <MouseBinding Gesture="LeftClick" Command="{Binding OpenGithubLinkCommand}" />
+                    <MouseBinding Command="{Binding OpenGithubLinkCommand}" Gesture="LeftClick" />
                 </Image.InputBindings>
                 <Image.Effect>
-                    <DropShadowEffect ShadowDepth="1" Opacity="0.3" BlurRadius="4" Color="#000000"/>
+                    <DropShadowEffect
+                        BlurRadius="4"
+                        Opacity="0.3"
+                        ShadowDepth="1"
+                        Color="#000000" />
                 </Image.Effect>
             </Image>
 
-            <!-- Discord Button -->
-            <Image Grid.Row="2"
-                   Source="/eTools Ultimate;component/Assets/Icons/discord.png" 
-                   Width="36" 
-                   Height="36" 
-                   Stretch="Uniform"
-                   Margin="0,0,20,20"
-                   HorizontalAlignment="Right"
-                   VerticalAlignment="Bottom"
-                   Cursor="Hand"
-                   ToolTip="Join our Discord server"
-                   RenderOptions.BitmapScalingMode="HighQuality">
+            <!--  Discord Button  -->
+            <Image
+                Grid.Row="2"
+                Width="36"
+                Height="36"
+                Margin="0,0,20,20"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Cursor="Hand"
+                RenderOptions.BitmapScalingMode="HighQuality"
+                Source="/eTools Ultimate;component/Assets/Icons/discord.png"
+                Stretch="Uniform"
+                ToolTip="Join our Discord server">
                 <Image.InputBindings>
-                    <MouseBinding Gesture="LeftClick" Command="{Binding OpenDiscordLinkCommand}" />
+                    <MouseBinding Command="{Binding OpenDiscordLinkCommand}" Gesture="LeftClick" />
                 </Image.InputBindings>
                 <Image.Effect>
-                    <DropShadowEffect ShadowDepth="1" Opacity="0.3" BlurRadius="4" Color="#000000"/>
+                    <DropShadowEffect
+                        BlurRadius="4"
+                        Opacity="0.3"
+                        ShadowDepth="1"
+                        Color="#000000" />
                 </Image.Effect>
             </Image>
 
-            <!-- Changelog-Dialog (hidden) -->
-            <Frame x:Name="ChangelogFrame" 
-                   Visibility="Collapsed"
-                   Grid.RowSpan="3" />
+            <!--  Changelog-Dialog (hidden)  -->
+            <Frame
+                x:Name="ChangelogFrame"
+                Grid.RowSpan="3"
+                Visibility="Collapsed" />
         </Grid>
     </ScrollViewer>
 </Page>
