--- a/eTools Ultimate/Views/Pages/Settings/PersonalizationPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/PersonalizationPage.xaml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <Page
     x:Class="eTools_Ultimate.Views.Pages.PersonalizationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:vm="clr-namespace:eTools_Ultimate.ViewModels.Pages"
-    xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
     Title="PersonalizationPage"
     d:DataContext="{d:DesignInstance vm:PersonalizationViewModel,
                                      IsDesignTimeCreatable=False}"
@@ -21,12 +21,12 @@
 
     <Page.Resources>
         <converters:ThemeToIndexConverter x:Key="ThemeToIndexConverter" />
-        
+
         <Style x:Key="CustomTimeInputStyle" TargetType="Grid">
-            <Setter Property="Visibility" Value="Collapsed"/>
+            <Setter Property="Visibility" Value="Collapsed" />
             <Style.Triggers>
                 <DataTrigger Binding="{Binding SelectedItem.Content, ElementName=AutoSaveCombo}" Value="Custom">
-                    <Setter Property="Visibility" Value="Visible"/>
+                    <Setter Property="Visibility" Value="Visible" />
                 </DataTrigger>
             </Style.Triggers>
         </Style>
@@ -37,8 +37,8 @@
             Margin="45,0,45,8"
             FontTypography="BodyStrong"
             Text="Appearance &amp; behavior" />
-        
-        <!-- Theme Selection -->
+
+        <!--  Theme Selection  -->
         <ui:CardControl Margin="45,0,45,12" Icon="{ui:SymbolIcon Color24}">
             <ui:CardControl.Header>
                 <Grid>
@@ -50,20 +50,16 @@
                         Grid.Row="0"
                         FontTypography="Body"
                         Text="App theme" />
-                    <ui:TextBlock
-                        Grid.Row="1"
-                        Text="Select which app theme to display" />
+                    <ui:TextBlock Grid.Row="1" Text="Select which app theme to display" />
                 </Grid>
             </ui:CardControl.Header>
-            <ComboBox
-                MinWidth="200"
-                SelectionChanged="ComboBox_SelectionChanged">
-                <ComboBoxItem Content="Light" IsSelected="{Binding IsLightTheme}"/>
-                <ComboBoxItem Content="Dark" IsSelected="{Binding IsDarkTheme}"/>
+            <ComboBox MinWidth="200" SelectionChanged="ComboBox_SelectionChanged">
+                <ComboBoxItem Content="Light" IsSelected="{Binding IsLightTheme}" />
+                <ComboBoxItem Content="Dark" IsSelected="{Binding IsDarkTheme}" />
             </ComboBox>
         </ui:CardControl>
 
-        <!-- TO-DO: Language Selection -->
+        <!--  TO-DO: Language Selection  -->
         <ui:CardControl Margin="45,0,45,12" Icon="{ui:SymbolIcon LocalLanguage24}">
             <ui:CardControl.Header>
                 <Grid>
@@ -75,20 +71,17 @@
                         Grid.Row="0"
                         FontTypography="Body"
                         Text="Application language" />
-                    <ui:TextBlock
-                        Grid.Row="1"
-                        Text="Choose your preferred language" />
+                    <ui:TextBlock Grid.Row="1" Text="Choose your preferred language" />
                 </Grid>
             </ui:CardControl.Header>
-            <ComboBox
-                MinWidth="200">
-                <ComboBoxItem Content="English (Default)" IsSelected="True"/>
-                <ComboBoxItem Content="German"/>
-                <ComboBoxItem Content="French"/>
+            <ComboBox MinWidth="200">
+                <ComboBoxItem Content="English (Default)" IsSelected="True" />
+                <ComboBoxItem Content="German" />
+                <ComboBoxItem Content="French" />
             </ComboBox>
         </ui:CardControl>
 
-        <!-- TO-DO: Auto-Save Interval Selection -->
+        <!--  TO-DO: Auto-Save Interval Selection  -->
         <ui:CardControl Margin="45,0,45,12" Icon="{ui:SymbolIcon Save24}">
             <ui:CardControl.Header>
                 <Grid>
@@ -100,9 +93,7 @@
                         Grid.Row="0"
                         FontTypography="Body"
                         Text="Auto-save interval" />
-                    <ui:TextBlock
-                        Grid.Row="1"
-                        Text="Set the time interval for automatic saving" />
+                    <ui:TextBlock Grid.Row="1" Text="Set the time interval for automatic saving" />
                 </Grid>
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
@@ -111,26 +102,28 @@
                     MinWidth="120"
                     Margin="0,0,8,0"
                     SelectedIndex="0">
-                    <ComboBoxItem Content="5 minutes"/>
-                    <ComboBoxItem Content="15 minutes"/>
-                    <ComboBoxItem Content="30 minutes"/>
-                    <ComboBoxItem Content="Custom"/>
+                    <ComboBoxItem Content="5 minutes" />
+                    <ComboBoxItem Content="15 minutes" />
+                    <ComboBoxItem Content="30 minutes" />
+                    <ComboBoxItem Content="Custom" />
                 </ComboBox>
                 <Grid Style="{StaticResource CustomTimeInputStyle}">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <ui:NumberBox Grid.Column="0" 
-                                x:Name="MinutesNumberBox" 
-                                MinWidth="100"
-                                Minimum="0"
-                                SpinButtonPlacementMode="Inline"/>
-                    <TextBlock Grid.Column="1" 
-                                Text="min" 
-                                VerticalAlignment="Center" 
-                                Margin="5,0,0,0"/>
+                    <ui:NumberBox
+                        x:Name="MinutesNumberBox"
+                        Grid.Column="0"
+                        MinWidth="100"
+                        Minimum="0"
+                        SpinButtonPlacementMode="Inline" />
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="5,0,0,0"
+                        VerticalAlignment="Center"
+                        Text="min" />
                 </Grid>
             </StackPanel>
         </ui:CardControl>
