--- a/eTools Ultimate/Views/Windows/MainWindow.xaml
+++ b/eTools Ultimate/Views/Windows/MainWindow.xaml
@@ -36,12 +36,15 @@
             x:Name="TitleBar"
             Title="{Binding ViewModel.ApplicationTitle}"
             Grid.Row="0"
-            CloseWindowByDoubleClickOnIcon="True" Margin="35,0,0,-5">
+            Margin="35,0,0,-5"
+            CloseWindowByDoubleClickOnIcon="True">
             <ui:TitleBar.Icon>
-                <ui:ImageIcon Source="pack://application:,,,/eTools Ultimate;component/Assets/Icons/eTools.png" 
-                              Width="18" Height="18" 
-                              Margin="0,0,0,0"
-                              RenderOptions.BitmapScalingMode="HighQuality" />
+                <ui:ImageIcon
+                    Width="18"
+                    Height="18"
+                    Margin="0,0,0,0"
+                    RenderOptions.BitmapScalingMode="HighQuality"
+                    Source="pack://application:,,,/eTools Ultimate;component/Assets/Icons/eTools.png" />
             </ui:TitleBar.Icon>
         </ui:TitleBar>
 
@@ -54,10 +57,10 @@
             IsBackButtonVisible="Visible"
             IsPaneToggleVisible="True"
             MenuItemsSource="{Binding ViewModel.MenuItems, Mode=OneWay}"
+            Navigated="RootNavigation_Navigated"
             OpenPaneLength="220"
             PaneDisplayMode="Left"
-            TitleBar="{Binding ElementName=TitleBar, Mode=OneWay}"
-            Navigated="RootNavigation_Navigated">
+            TitleBar="{Binding ElementName=TitleBar, Mode=OneWay}">
             <ui:NavigationView.Header>
                 <ui:BreadcrumbBar x:Name="BreadcrumbBar" Margin="42,32,42,20" />
             </ui:NavigationView.Header>
