--- a/eTools Ultimate/Views/Windows/SplashScreen.xaml
+++ b/eTools Ultimate/Views/Windows/SplashScreen.xaml
@@ -1,59 +1,73 @@
-<Window x:Class="eTools_Ultimate.Views.Windows.SplashScreen"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewmodels="clr-namespace:eTools_Ultimate.ViewModels.Windows"
-        xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
-        Title="SplashScreen" Height="250" Width="450"
-        WindowStartupLocation="CenterScreen"
-        WindowStyle="None"
-        ResizeMode="NoResize"
-        Background="Transparent"
-        AllowsTransparency="True"
-        d:DataContext="{d:DesignInstance viewmodels:SplashScreenViewModel, IsDesignTimeCreatable=False}"
-        mc:Ignorable="d">
+<Window
+    x:Class="eTools_Ultimate.Views.Windows.SplashScreen"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:eTools_Ultimate.ViewModels.Windows"
+    Title="SplashScreen"
+    Width="450"
+    Height="250"
+    d:DataContext="{d:DesignInstance viewmodels:SplashScreenViewModel,
+                                     IsDesignTimeCreatable=False}"
+    AllowsTransparency="True"
+    Background="Transparent"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <behaviors:Interaction.Triggers>
         <behaviors:EventTrigger EventName="Loaded">
-            <behaviors:InvokeCommandAction Command="{Binding LoadCommand}"/>
+            <behaviors:InvokeCommandAction Command="{Binding LoadCommand}" />
         </behaviors:EventTrigger>
     </behaviors:Interaction.Triggers>
     <Window.TaskbarItemInfo>
-        <TaskbarItemInfo x:Name="taskbarItemInfo" ProgressState="Normal" ProgressValue="{Binding LoadingProgress, Mode=OneWay}" />
+        <TaskbarItemInfo
+            x:Name="taskbarItemInfo"
+            ProgressState="Normal"
+            ProgressValue="{Binding LoadingProgress, Mode=OneWay}" />
     </Window.TaskbarItemInfo>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Image Source="/Assets/Images/SplashScreen.png" 
-                   Width="500" 
-                   Height="150"
-                   Stretch="Uniform"
-                   RenderOptions.BitmapScalingMode="HighQuality" />
+        <StackPanel
+            Grid.Row="0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
+            <Image
+                Width="500"
+                Height="150"
+                RenderOptions.BitmapScalingMode="HighQuality"
+                Source="/Assets/Images/SplashScreen.png"
+                Stretch="Uniform" />
             <TextBlock
-                        x:Name="LoadingText"
-                        Text="{Binding LoadingText}" 
-                       HorizontalAlignment="Center"
-                       Margin="0,10,0,0"
-                       Foreground="White" FontSize="12"/>
-            <ProgressBar Width="400" 
-                        Height="5" 
-                        IsIndeterminate="True"
-                        Margin="0,10,0,0">
+                x:Name="LoadingText"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Center"
+                FontSize="12"
+                Foreground="White"
+                Text="{Binding LoadingText}" />
+            <ProgressBar
+                Width="400"
+                Height="5"
+                Margin="0,10,0,0"
+                IsIndeterminate="True">
                 <ProgressBar.Foreground>
-                    <SolidColorBrush Color="#FFEB9A"/>
+                    <SolidColorBrush Color="#FFEB9A" />
                 </ProgressBar.Foreground>
             </ProgressBar>
         </StackPanel>
 
-        <TextBlock Grid.Row="2" 
-                   Text="aaaaaaaaaa"
-                   HorizontalAlignment="Right" 
-                   Margin="0,2,0,0"
-                   Foreground="Gray"/>
+        <TextBlock
+            Grid.Row="2"
+            Margin="0,2,0,0"
+            HorizontalAlignment="Right"
+            Foreground="Gray"
+            Text="aaaaaaaaaa" />
     </Grid>
 </Window> 
